Emergency: Fix logo appear even if the mobile screen is too small

--- a/website/style/contacts_page/contacts.scss
+++ b/website/style/contacts_page/contacts.scss
@@ -43,7 +43,7 @@ section#contact {
             font-size: 1.25rem;
         }
 
-        div.social_item_image svg {
+        div.social_item_image img {
             display: none;
         }
     }
